hot fix: fix player not found issue on ios device.

--- a/src/styles/plugin.scss
+++ b/src/styles/plugin.scss
@@ -10,9 +10,9 @@
 }
 
 .vjs-full-window .video-js{
-  position: fixed;
-  top: 0;
-  left: 0;
+  position: fixed!important;
+  top: 0!important;
+  left: 0!important;
   z-index: 1000000;
 }
 
